# ActiveEtfTracker

./: .gitignore  LICENSE  NOTICE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  refresh-data.yml  tests.yml
docs/: data_source_policy.md  open_source_safety.md  security.md
examples/: sample_data.json
scripts/: daily_run.sh  seed_demo.py  verify_run.py
src/active_etf_tracker/: __init__.py  cli.py  config.py  db.py  export.py  models.py  server.py  web_export.py
src/active_etf_tracker/scrapers/: __init__.py  base.py  moneydj.py  twse_list.py
src/active_etf_tracker/services/: __init__.py  aggregate.py  diff_service.py  trading_date.py
tests/: test_aggregate.py  test_diff_service.py
web/: app.js  index.html  styles.css
